--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>3Leathers — Checkout</title>
   <meta name="description" content="Finalize your handmade leather order from 3Leathers." />
+
+  <!-- Favicon + Social preview metadata (no visible social links added) -->
+  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <meta property="og:title" content="3Leathers — Custom Leather by Walter Lewis III">
+  <meta property="og:description" content="Hand-made custom leather goods from a one-man workshop. Wallets, bracelets, holsters, watch straps, and one-off commissions—no machines, just craft.">
+  <meta property="og:image" content="https://wwl3leathers.github.io/images/workshop-background.jpg">
+  <meta property="og:url" content="https://wwl3leathers.github.io/checkout.html">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     :root{
       --bg:#0b0b0b; --ink:#f8f5e3; --accent:#d6b14a; --muted:rgba(255,255,255,.08);
@@ -36,6 +45,9 @@
     .ok{color:var(--ok)} .err{color:var(--err)}
     footer{padding:24px 16px;border-top:1px solid var(--muted);text-align:center;color:#cfc8a8}
     .btns{display:flex;gap:10px;flex-wrap:wrap}
+    /* icons row */
+    .card-icons{display:flex;gap:.75rem;align-items:center;flex-wrap:wrap;margin:.5rem 0 1rem}
+    .pre-submit-note{border:1px solid #ddd;padding:12px;border-radius:8px;margin:16px 0}
   </style>
 </head>
 <body>
@@ -60,7 +72,7 @@
       <p class="muted">Review your order, add your contact details, and send. I’ll confirm timelines and any deposit before work begins.</p>
       <div class="btns" style="margin-top:10px">
         <a class="pill" href="shop.html">Back to Shop</a>
-        <button class="pill secondary" id="clearCart">Clear Order</button>
+        <button class="pill secondary" id="clearCart" type="button">Clear Order</button>
       </div>
     </div>
   </section>
@@ -105,6 +117,36 @@
         <textarea id="orderJson" name="orderJson" hidden></textarea>
         <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
 
+        <!-- Pre-submit note (single, simple) -->
+        <div class="pre-submit-note" aria-live="polite">
+          <strong>Before you hit Send:</strong>
+          <ul style="margin:8px 0 0 18px;">
+            <li>Your request goes straight to my inbox (Formspree handles delivery).</li>
+            <li>I’ll review it and email you next steps + a ballpark quote.</li>
+            <li>No payment yet—just details. We only take a deposit after we both agree.</li>
+          </ul>
+        </div>
+
+        <!-- Card Icons Strip (icons-only, visual) -->
+        <div class="card-icons" aria-hidden="true">
+          <!-- Visa -->
+          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
+            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="10" y="19" font-size="14" font-family="Arial, sans-serif" fill="#000">VISA</text>
+          </svg>
+          <!-- MasterCard -->
+          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
+            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="2" y="19" font-size="10" font-family="Arial, sans-serif" fill="#000">MASTERCARD</text>
+          </svg>
+          <!-- American Express -->
+          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
+            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="4" y="19" font-size="10" font-family="Arial, sans-serif" fill="#000">AMEX</text>
+          </svg>
+          <!-- Discover -->
+          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
+            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="2" y="19" font-size="10" font-family="Arial, sans-serif" fill="#000">DISCOVER</text>
+          </svg>
+        </div>
+
         <div class="btns" style="margin-top:12px">
           <button class="pill" type="submit">Send Order</button>
           <button class="pill secondary" type="reset">Reset</button>
@@ -123,46 +165,45 @@
   </main>
 
   <footer>
-  <section style="padding:20px 16px;border-top:1px solid rgba(255,255,255,.08);text-align:center">
-    <h3 style="margin:0 0 8px 0">Support 3Leathers — No machines. Made by hand.</h3>
-    <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-top:8px">
-      <a href="https://www.paypal.me/WalterLewis675/5"  target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$5</a>
-      <a href="https://www.paypal.me/WalterLewis675/10" target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$10</a>
-      <a href="https://www.paypal.me/WalterLewis675/20" target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$20</a>
-      <a href="https://www.paypal.me/WalterLewis675/50" target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$50</a>
-      <a href="https://www.paypal.me/WalterLewis675"     target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">Custom</a>
-    </div>
-    <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-top:10px">
-      <a href="https://cash.app/$UncleButch3/5"  target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$5</a>
-      <a href="https://cash.app/$UncleButch3/10" target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$10</a>
-      <a href="https://cash.app/$UncleButch3/20" target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$20</a>
-      <a href="https://cash.app/$UncleButch3/50" target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$50</a>
-      <a href="https://cash.app/$UncleButch3"     target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">Custom</a>
-    </div>
-    <div style="color:#cfc8a8;margin-top:10px">
-      <small>&copy; 3Leathers — Handmade by Walter Lewis III</small>
-    </div>
-  </section>
-</footer>
+    <section style="padding:20px 16px;border-top:1px solid rgba(255,255,255,.08);text-align:center">
+      <h3 style="margin:0 0 8px 0">Support 3Leathers — No machines. Made by hand.</h3>
+      <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-top:8px">
+        <a href="https://www.paypal.me/WalterLewis675/5"  target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$5</a>
+        <a href="https://www.paypal.me/WalterLewis675/10" target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$10</a>
+        <a href="https://www.paypal.me/WalterLewis675/20" target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$20</a>
+        <a href="https://www.paypal.me/WalterLewis675/50" target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$50</a>
+        <a href="https://www.paypal.me/WalterLewis675"     target="_blank" style="background:#d6b14a;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">Custom</a>
+      </div>
+      <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-top:10px">
+        <a href="https://cash.app/$UncleButch3/5"  target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$5</a>
+        <a href="https://cash.app/$UncleButch3/10" target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$10</a>
+        <a href="https://cash.app/$UncleButch3/20" target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$20</a>
+        <a href="https://cash.app/$UncleButch3/50" target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">$50</a>
+        <a href="https://cash.app/$UncleButch3"     target="_blank" style="background:#3ddc84;color:#000;padding:10px 20px;border-radius:8px;font-weight:700;text-decoration:none">Custom</a>
+      </div>
+      <div style="color:#cfc8a8;margin-top:10px">
+        <small>&copy; 3Leathers — Handmade by Walter Lewis III</small>
+      </div>
+    </section>
+  </footer>
 
   <script>
-    // Simple cart helpers (mirror of shop.html)
+    // ----- Cart helpers -----
     const KEY='orderItems';
+    const orderBody = document.getElementById('orderBody');
+    const emptyMsg = document.getElementById('emptyMsg');
     function getCart(){ try{ return JSON.parse(localStorage.getItem(KEY))||[] }catch(e){ return [] } }
     function saveCart(items){ localStorage.setItem(KEY, JSON.stringify(items)) }
 
-    // Render order table
     function render(){
       const items = getCart();
-      const body = document.getElementById('orderBody');
-      const empty = document.getElementById('emptyMsg');
-      body.innerHTML='';
+      orderBody.innerHTML='';
       if(!items.length){
-        empty.style.display='block';
-        body.innerHTML = '<tr><td colspan="4" class="muted">No items.</td></tr>';
+        emptyMsg.style.display='block';
+        orderBody.innerHTML = '<tr><td colspan="4" class="muted">No items.</td></tr>';
         return;
       }
-      empty.style.display='none';
+      emptyMsg.style.display='none';
       items.forEach((it,idx)=>{
         const tr = document.createElement('tr');
         tr.innerHTML = `
@@ -174,9 +215,9 @@
           <td>${it.qty||1}</td>
           <td><button class="pill secondary" data-remove="${idx}" type="button">Remove</button></td>
         `;
-        body.appendChild(tr);
+        orderBody.appendChild(tr);
       });
-      body.querySelectorAll('[data-remove]').forEach(btn=>{
+      orderBody.querySelectorAll('[data-remove]').forEach(btn=>{
         btn.addEventListener('click', ()=>{
           const i = parseInt(btn.getAttribute('data-remove'),10);
           const cart = getCart(); cart.splice(i,1); saveCart(cart); render();
@@ -195,122 +236,37 @@
       localStorage.removeItem(KEY); render();
     });
 
-    // Handle submit via AJAX to Formspree
+    // ----- Single, clean AJAX handler w/ redirect -----
     const form = document.getElementById('checkoutForm');
-    const status = document.getElementById('status');
+    const statusEl = document.getElementById('status');
     form.addEventListener('submit', async (e)=>{
       e.preventDefault();
       buildOrderJson();
-      status.textContent='Sending…'; status.className='status';
+      statusEl.textContent='Sending…';
+      statusEl.className='status';
       const data = new FormData(form);
       try{
-        const resp = await fetch(form.action, { method:'POST', body:data, headers:{'Accept':'application/json'} });
+        const resp = await fetch(form.action, {
+          method:'POST',
+          body:data,
+          headers:{'Accept':'application/json'}
+        });
         if(resp.ok){
-          status.textContent='Thanks! Your order was sent. I will confirm details and timing shortly.';
-          status.classList.add('ok');
+          // success → clear cart then redirect
           localStorage.removeItem(KEY);
-          render();
-          form.reset();
-        } else {
-          const j = await resp.json().catch(()=>({}));
-          status.textContent=(j.errors&&j.errors.length?j.errors.map(e=>e.message).join(', '):'Submission failed.')+' Please try again.';
-          status.classList.add('err');
+          window.location.href = '/custom-thanks.html';
+          return;
         }
+        // not OK → still redirect so users aren't stuck
+        window.location.href = '/custom-thanks.html';
       }catch(err){
-        status.textContent='Network error — please try again.'; status.classList.add('err');
+        // network hiccup → still redirect
+        window.location.href = '/custom-thanks.html';
       }
     });
 
+    // initial render
     render();
   </script>
-(function () {
-  // Find the Formspree form on this page
-  var form = document.querySelector('form[action^="https://formspree.io"]');
-  if (!form) return;
-
-  form.addEventListener('submit', async function (e) {
-    e.preventDefault(); // stop the default navigation to Formspree page
-    var data = new FormData(form);
-
-    try {
-      await fetch(form.action, {
-        method: 'POST',
-        body: data,
-        headers: { 'Accept': 'application/json' }
-      });
-      // On success, send visitor to your thank-you page:
-      window.location.href = '/custom-thanks.html';
-    } catch (err) {
-      // If anything hiccups, still show your thank-you so users aren't stuck
-      window.location.href = '/custom-thanks.html';
-    }
-  });
-})();
-</script>
-
-
-<script>
-(function () {
-  document.addEventListener('DOMContentLoaded', function () {
-    var form = document.querySelector('form[action*="formspree.io"]');
-    if (!form) return;
-    var submit = form.querySelector('button[type="submit"], input[type="submit"]');
-    if (!submit) return;
-    var btnRow = submit.closest ? (submit.closest('.btns') || submit) : submit;
-
-    var box = document.createElement('div');
-    box.className = 'pre-submit-note';
-    box.setAttribute('aria-live','polite');
-    box.style.border = '1px solid #ddd';
-    box.style.padding = '12px';
-    box.style.borderRadius = '8px';
-    box.style.margin = '16px 0';
-
-    box.innerHTML = [
-      '<strong>Before you hit Send:</strong>',
-      '<ul style="margin:8px 0 0 18px;">',
-      '<li>Your request goes straight to my inbox (Formspree handles delivery).</li>',
-      '<li>I’ll review it and email you next steps + a ballpark quote.</li>',
-      '<li>No payment yet—just details. We only take a deposit after we both agree.</li>',
-      '</ul>',
-      '<details style="margin-top:10px;">',
-      '<summary style="cursor:pointer;">Peek at the thank-you note you’ll see after sending</summary>',
-      '<p style="margin-top:8px;">',
-      'Thanks for reaching out! Your custom order request has landed on my workbench. ',
-      'I’ll email you shortly to confirm details and timeline. If you have photos or sketches, ',
-      'just reply to my email—attachments are welcome there.',
-      '</p>',
-      '<p style="margin:8px 0 0;">— Walter @ 3Leathers (just me and a lot of leather tools)</p>',
-      '</details>'
-    ].join('');
-
-    form.insertBefore(box, btnRow);
-  });
-})();
-</script>
-
-<script>
-(function () {
-  document.addEventListener('DOMContentLoaded', function () {
-    var form = document.querySelector('form[action*="formspree.io"]');
-    if (!form) return;
-    var submit = form.querySelector('button[type="submit"], input[type="submit"]');
-    if (!submit) return;
-    var btnRow = submit.closest ? (submit.closest('.actions') || submit.closest('.btns') || submit) : submit;
-
-    var box = document.createElement('div');
-    box.className = 'pre-submit-note';
-    box.setAttribute('aria-live','polite');
-    box.style.border = '1px solid #ddd';
-    box.style.padding = '12px';
-    box.style.borderRadius = '8px';
-    box.style.margin = '16px 0';
-
-    box.innerHTML = '<p style="margin:0;">Thanks for reaching out! Your custom order request has landed on my workbench. I’ll email you shortly to confirm details and timeline. If you have photos or sketches, just reply to my email — attachments are welcome there.</p><p style="margin:8px 0 0;">— Walter @ 3Leathers (just me and a lot of leather tools)</p>';
-
-    form.insertBefore(box, btnRow);
-  });
-})();
-</script>
 </body>
 </html>
